Fix spacing on the right side

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* Reset */
+.row {
+	margin-right: 0;
+}
+
 /* Navbar */
 #navbar {
 	padding: 1em 2em;
